--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -146,6 +146,10 @@ div[data-element="notification"]
             box-flex 0
             text-align left
 
+        & .content
+          margin-left 0
+          margin-right 0
+
       & .accept
         float left
         width 50%
@@ -194,7 +198,7 @@ div[data-element="notification"]
 
         & > span
           display block
-          width 100%
+          // width 100%
           text-align center
 
       & .title
@@ -207,6 +211,8 @@ div[data-element="notification"]
 
     & .content
       padding-top 0.5em
+      margin-left 10px
+      margin-right 10px
 
     &.loading, &.progress
       min-width 250px
